# GEWT

./: .gitattributes  .gitignore  README.md  agents.md  components.json  index.html  package.json  vite.config.ts  vitest.config.ts
.claude/: launch.json
.depot/workflows/: workflow.yml
.github/workflows/: migrate-secrets-to-depot-ci-1781234258846.yml  workflow.yml
api/: .env.example  Cargo.toml
api/examples/: hash_password.rs
api/migrations/: 202605310001_init.sql  202605310002_add_student_caste.sql  202605310002_remove_backup_import.sql  202605310003_add_student_religion.sql  202605310004_add_receipt_fee_type.sql  202606010001_drop_dropdown_numbering.sql  202606010002_add_sync_support.sql  202606010003_add_course_sync_support.sql  202606010004_add_student_demographics_and_receipt_fee_type.sql  202606070001_student_fee_split.sql  202606070002_student_promotion_year.sql  202606070003_student_promotion_period.sql  202606080001_cancelled_admissions.sql  202606100001_course_letterhead.sql
api/src/: lib.rs  main.rs
scripts/: bump-version.mjs
src/: App.css  App.tsx  main.tsx  types.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: backup.rs  cache.rs  db.rs  lan.rs  lib.rs  main.rs
src/components/app/: AppShell.test.tsx  AppShell.tsx  CourseGroups.tsx  DataTable.tsx  Field.tsx  Info.tsx  StudentPhotoField.tsx
src/components/print/: PrintPage.tsx
src/components/ui/: badge.tsx  button.tsx  card.tsx  checkbox.tsx  dialog.tsx  input.tsx  select.tsx  switch.tsx  tabs.tsx  textarea.tsx  tooltip.tsx
src/data/: seeds.ts
src/features/admission/: Admission.tsx  AdmissionPrint.tsx
src/features/backup/: Backup.tsx
src/features/boot/: BootError.tsx
src/features/login/: Login.test.tsx  Login.tsx
src/features/outstanding/: Outstanding.tsx  OutstandingPrint.tsx
src/features/promote/: Promote.tsx
src/features/receipt/: Receipt.tsx  ReceiptPrint.test.tsx  ReceiptPrint.tsx
src/features/students/: Students.tsx
src/features/utility/: Utility.tsx
src/lib/: access.test.ts  access.ts  api.test.ts  api.ts  cache.ts  course-duration.test.ts  course-duration.ts  env-config.ts  format.test.ts  format.ts  image.ts  letterhead.ts  print.ts  updater.ts
src/test/: elaborate-print-render.test.tsx  factories.ts  setup.ts
